--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,13 @@ u-template-info{
   margin: 0px;
 }
 
+.success-msg {
+  color: #57a773;
+  padding: 10px 15px;
+}
+
+.err-msg{
+  color: #ee6352;
+  padding: 10px 15px;
+
+}
